--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <h1>Example title</h1>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GOIT JS HW 11</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+  <header class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h3 class="animate-charcter"><a href="#home">PIXABAY</a></h3>
+          </div>
+        </div>
+      </div>
+    <form class="search-form" id="search-form">
+      <input class="search-form-input" 
+      type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+  </header>
+
+  <main class="main-content">
+    <section class="section">
+      <div class="container">
+  <div class="gallery">
+    <!-- Image cards -->
+  </div>
+  </div>
+  </section>
+  </main>
+  <script src="./js/index.js" type="module"></script>
+</body>
 </html>
